registro-star-wars-revota-dos-clones-k8s/k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registro-atividades-api
  namespace: registro-atividades-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: registro-atividades-api
  template:
    metadata:
      labels:
        app: registro-atividades-api
    spec:
      containers:
        - name: api
          image: tomaslocatelli/registro-star-wars-revolta-dos-clones-devops:latest
          ports:
            - containerPort: 8001
