registro-star-wars-revota-dos-clones-k8s/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registro-atividades-api-service
  namespace: registro-atividades-2
spec:
  selector:
    app: registro-atividades-api
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  type: ClusterIP
