registro-star-wars-revota-dos-clones-k8s/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registro-atividades-frontend-service
  namespace: registro-atividades-2
spec:
  type: NodePort
  selector:
    app: registro-atividades-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30100
      protocol: TCP
