registro-star-wars-revota-dos-clones-k8s/k8s/argocd-repo-server-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: argocd-repo-server-network-policy
    namespace: argocd
spec:
    podSelector:
        matchLabels:
            app.kubernetes.io/name: argocd-repo-server
    policyTypes:
        - Ingress
    ingress:
        - from:
              - podSelector: {}
          ports:
              - protocol: TCP
                port: 8081
              - protocol: TCP
                port: 8084
